--- a/agenda.org
+++ b/agenda.org
@@ -3,14 +3,24 @@
   - [X] phermone trail tracking
   - [X] return with leaf to nest
 * Inside Nest
-** Fungus [2/2]
+** Fungus [2/3]
    - [X] change list of fungi to single fungus instance
    - [X] replace fungi[0] with fungus everywhere
-** Nest [0/5]
-   - [ ] Add energy buffer
-   - [ ] Implement caretakers
-   - [ ] Implement biomass -> energy conversion via caretaker
-   - [ ] Implement energy -> offspring conversion via buffer
-   - [ ] Change nest_pos to nest.pos
+   - [ ] parameterize death biomass threshold
+** Nest [6/8]
+   - [X] Add energy buffer
+   - [X] initial distribution of foragers and caretakers
+   - [ ] Finalize energy -> offspring closed form
+   - [X] Implement caretakers
+   - [X] Implement biomass -> energy conversion via caretaker
+   - [X] Implement energy -> offspring conversion via buffer
+     - Uncomment code
+   - [X] Change nest_pos to nest.pos
+   - [ ] Optional / low-priority
+     - [ ] New ants can also be initialized as caretakers
+     - [ ] [Performance] collapse caretaking step into single function call
+** Ants [1/2]
+   - [X] Add caretaking state to enum
+   - [ ] Track number of caretakers in nest
 * Dynamic Task Allocation [/]
   - [ ] The rest of the fucking owl
