sobol visualization notebook

--- a/leafcutter_ants_fungi_mutualism/OFAT_visualization.ipynb
+++ b/leafcutter_ants_fungi_mutualism/OFAT_visualization.ipynb
@@ -82,15 +82,15 @@
     "\n",
     "output_names = {\"Ants_Biomass\": r'Number of Ants $A(t)$',\n",
     "                   \"Fungus_Biomass\": r'Fungus biomass $F(t)$',\n",
-    "                   \"Fraction forager ants\": r'Fraction forager ants $A_f(t)$',\n",
-    "                   \"Dormant caretakers fraction\": r'Fraction dormant $A_{c_D}(t)$',\n",
+    "                   \"Fraction forager ants\": r'Fraction forager ants $\\pi_f(t)$',\n",
+    "                   \"Dormant caretakers fraction\": r'Fraction dormant $\\pi_{c_D}(t)$',\n",
     "                   \"Death reason\": r\"Fraction of extinct runs\",\n",
     "               }\n",
     "\n",
     "title_names = {\"Ants_Biomass\": r'Number of Ants $',\n",
     "                   \"Fungus_Biomass\": r'Fungus biomass $F(t)$',\n",
-    "                   \"Fraction forager ants\": r'Fraction forager ants $A_f(t)$',\n",
-    "                   \"Dormant caretakers fraction\": r'Fraction dormant $A_{c_D}(t)$',\n",
+    "                   \"Fraction forager ants\": r'Fraction forager ants $\\pi_f(t)$',\n",
+    "                   \"Dormant caretakers fraction\": r'Fraction dormant $\\pi_{c_D}(t)$',\n",
     "                   \"Death reason\": r\"Fraction of extinct runs\",\n",
     "               }\n",
     "\n",
